syntax = "proto3";
package sysmon;

service SysMon {
    rpc CheckStatus (Empty) returns (StatusResponse);
} 

message StatusResponse {
    string error_message = 1;
    uint32 uptime_sec = 2;
    uint32 running_programs = 3;
}

message Empty {}
